--- a/CSS/Style.css
+++ b/CSS/Style.css
@@ -1,13 +1,13 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
 
-@import url('https://fonts.googleapis.com/css2?family=Cormorant+Infant:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&family=Libre+Bodoni:ital,wght@0,400..700;1,400..700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Libre+Bodoni:ital,wght@0,400..700;1,400..700&display=swap');
 
 
 :root {
     /*FONTS*/
     --primary-heading-fonts: "Libre Bodoni", serif;
-    --secondary-heading-fonts: "Cormorant Infant", serif;
-    --article-fonts: "Cormorant Infant", serif;
+    --secondary-heading-fonts: "Montserrat", sans-serif;
+    --article-fonts: "Montserrat", sans-serif;
     --primary-button-fonts: "Libre Bodoni", serif;
     
     /*COLOR*/
@@ -38,6 +38,8 @@
 
 body {
     background-color: var(--primary-bg-color);
+    display: grid;
+    place-items: center;
 }
 .page-wrapper {
     width: 100vw;
@@ -51,9 +53,9 @@ body {
 
     .menu {
         display: flex;
-        align-items: center;
+        /*align-items: center;
         cursor: pointer;
-        transform: translateY(10px);
+        transform: translateY(10px);*/
     
     }
     .menu__link {
@@ -68,15 +70,17 @@ body {
         padding: 1rem;
     }
     .menu__title:hover {
-            background-color: var(--hover-button-brown);
-            color: var(--primary-fonts-color);
-             
-        }
+        background-color: var(--hover-button-brown);
+        color: var(--primary-fonts-color);   
+    }
+
+    .menu__ham {
+        display: none;
+    }
     
     .heading-logo__link img {
-            width: 250px;
-          
-        }
+         width: 250px;  
+    }
 }
     
    
@@ -115,34 +119,6 @@ body {
     
 }
 
-.heading__title-first--transform {
-    transform: translateX(30%);
-    color: var(--primary-fonts-color);
-    font-size: 60px;
-    padding-top: 3rem;
-}
-
-
-.form-btn__submit-button {
-        width: fit-content;
-        padding: 0.5rem 3rem;
-        font-size: var(--sub-heading-font-size);
-        font-weight: 700;
-        font-family: var(--article-fonts);
-        margin-left: 2rem;
-        word-spacing: 10px;
-        box-shadow: 0 2px 6px 0 rgba(3, 3, 3, 0.25);
-        border: none;
-        border-radius: 5px;
-        background-color: var(--primary-submit-button);
-    .fa-magnifying-glass {
-        transform: scale(1.25);
-    }
-}   
-.form-btn__submit-button:hover {
-    background-color: var(--primary-hover-color);
-    color: var(--secondary-fonts-color);
-}
 
 /*OFFERS SECTION*/
 
@@ -159,6 +135,75 @@ body {
     flex-direction: column;
     text-align: center;
 }
+
+/*PRESENT SECTION*/
+.gift-container {
+    display: flex;
+    flex-direction: row;
+    padding: 7rem;
+    background-color: var(--hover-button-brown);
+}
+.gift {
+    padding: 3rem 0rem 2rem 0rem;
+    flex: 1;
+}
+.gift__image {
+    background-image: url(../assets/images/gift.png);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    width: 85%;
+    aspect-ratio: 1;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: var(--primary-bg-color);
+    border-radius: 50%;
+}
+.gift__image--circle {
+    aspect-ratio: 1;
+}
+.gift-article {
+    margin-top: 20%;
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    gap: 1.5rem;
+
+}
+hr {
+    width: 100%;
+    border: 1px solid var(--primary-fonts-color);
+}
+
+
+/*FONT STANDART*/
+
+.header__title-first {
+    font-family: var(--primary-heading-fonts);
+    color: var(--primary-fonts-color);
+    font-size: var(--heading-font-size);
+    font-weight: 100;
+    word-spacing: 10px;
+    letter-spacing: 1px;
+    text-align: center;
+    
+}
+.header__title-first--larg {
+    font-size: 60px;
+}
+.header__title-first__padding-top {
+    padding-top: 3rem;
+}
+
+.heading__title-first--transform {
+    transform: translateX(30%);
+    color: var(--primary-fonts-color);
+    font-size: 60px;
+    padding-top: 3rem;
+}
+
+
 .heading__title-second {
     font-family: var(--primary-heading-fonts);
     font-size: var(--sub-heading-font-size);
@@ -167,6 +212,9 @@ body {
     text-align: center;
     word-spacing: 10px;
 }
+.heading__title-second--left {
+    text-align: left;
+}
 .heading__title-third {
     font-family: var(--secondary-title-fonts);
     font-size: var(--sub-heading-font-size);
@@ -174,12 +222,47 @@ body {
     word-spacing: 5px;
     color: var(--primary-fonts-color);
     margin-bottom: 2rem;
+    text-align: center;
 }
 
 .aside__heading__title--italic {
     font-style: italic;
     margin-bottom: 2rem;
 }
+
+.header__sub-title {
+    font-family: var(--secondary-heading-fonts);
+    color: var(--primary-fonts-color);
+    font-size: var(--sub-heading-font-size);
+    font-weight: 500;
+    text-align: center;
+    padding-bottom: 3rem;
+    width: 750px;
+    word-spacing: normal;
+    
+}
+.header__sub-title--small {
+    font-weight: 400;
+    font-size: var(--article-font-size);
+}
+
+.article-text {
+    font-family: var(--article-fonts);
+    font-size: var(--article-font-size);
+    font-weight: 400;
+    padding-bottom: 2rem;
+    text-align: left;
+    overflow: hidden;
+    color: var(--primary-fonts-color);
+}
+.article-text--center {
+    padding: 0;
+    text-align: center;
+}
+
+/*OFFERS SECTION*/
+
+
 .offers__article__grid {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
@@ -194,32 +277,8 @@ body {
 
     }
 }
-.article-text {
-    font-family: var(--article-fonts);
-    font-size: var(--article-font-size);
-    width: 100%;
-    padding-bottom: 2rem;
-    text-align: left;
-    overflow: hidden;
-    color: var(--primary-fonts-color);
-}
 
-.info-btn__submit-btn {
-    border: none;
-    border-radius: 5px;
-    font-style: italic;
-    color: var(--primary-hover-color);
-    font-family: var(--primary-button-fonts);
-    font-size: 16px;
-    font-weight: 700;
-    letter-spacing: 2px;
-    cursor: pointer;
 
-}
-
-.info-btn__submit-btn:hover {
-    text-decoration: underline;
-}
 
 /*FOOTER SECTION*/
 
@@ -230,9 +289,12 @@ body {
     place-items: center;
     gap: 1rem;
     padding: 3rem 7rem;
-    font-family: var(--secondary-title-fonts);
+    
     color: var(--primary-fonts-color);
     background-image: var(--bg-gradient);
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
    
     
 }
@@ -244,7 +306,7 @@ body {
     .footer__input {
         display: flex;
         flex-direction: row;
-
+    }
     .footer__input--email {
         padding: 0.5rem;
         width: 272px;
@@ -257,19 +319,24 @@ body {
         transform: translateX(-40px);
         width: 35px;
         height: 35px;
+    }
 }
-}
-}
+
 .footer__link-item {
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
 
+   a {
+        font-family: var(--secondary-title-fonts);
+    }
+
     .footer__link {
         text-decoration: none;
         color: var(--primary-fonts-color);
-        font-weight: 700;
+        font-weight: 500;
         font-size: 18px;
+        
     }
     .footer__link:hover {
         text-decoration: underline;
@@ -306,44 +373,46 @@ body {
     align-items: center;
     padding: 2rem 7rem;
 
-    img {
-        width: 60%;
-        aspect-ratio: 4 / 2;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        padding: 1rem;
-        border-radius: 10px;
-        border: none;
-        background-color: var(--hover-button-brown);
-        box-shadow: 0 2px 6px 0 rgba(3, 3, 3, 0.25);
-        margin-bottom: 3rem; 
-    }
-    
+}   
+.header__image--bg {
+    width: 30%;
+    background-image: url(../assets/images/09-day.jpg);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    aspect-ratio: 1;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: var(--primary-bg-color);
+    border-radius: 50%;
 }
-.header__title-first {
-    font-family: var(--primary-heading-fonts);
-    color: var(--primary-fonts-color);
-    font-size: var(--heading-font-size);
-    font-weight: 100;
-    word-spacing: 10px;
-    letter-spacing: 1px;
-    text-align: center;
-    
-}
-.header__sub-title {
-    font-family: var(--secondary-heading-fonts);
-    color: var(--primary-fonts-color);
-    font-size: var(--sub-heading-font-size);
-    font-weight: 100;
-    text-align: center;
-    padding-bottom: 3rem;
-    width: 750px;
-    word-spacing: normal;
-    
-    }
+
+
+
+
 
 /*BUTTON STANDARD*/
+.form-btn__submit-button {
+    width: fit-content;
+    padding: 0.5rem 3rem;
+    font-size: var(--sub-heading-font-size);
+    font-weight: 700;
+    font-family: var(--article-fonts);
+    margin-left: 2rem;
+    word-spacing: 10px;
+    border: none;
+    border-radius: 5px;
+    background-color: var(--primary-submit-button);
+.fa-magnifying-glass {
+    transform: scale(1.25);
+}
+}   
+
+.form-btn__submit-button:hover {
+    background-color: var(--primary-hover-color);
+    color: var(--secondary-fonts-color);
+}
 .submit-btn {
     display: flex;
     flex-direction: row;
@@ -365,7 +434,6 @@ body {
     font-size: var(--article-font-size);
     font-weight: 100;
     letter-spacing: 2px;
-    box-shadow: var(--main-box-shadow);
     word-spacing: 0.5rem;
     width: fit-content;
     cursor: pointer;
@@ -378,17 +446,50 @@ body {
     font-size: 12px;
     margin: 0;
 }
+.submit-btn__button--center{
+    display: flex;
+    align-self: center;
+    margin: 1rem 0 0 0;
+    padding: 1rem 2rem;
+}
+
+.info-btn__submit-btn {
+    border: none;
+    border-radius: 5px;
+    font-style: italic;
+    color: var(--primary-hover-color);
+    font-family: var(--primary-button-fonts);
+    font-size: 16px;
+    font-weight: 700;
+    letter-spacing: 2px;
+    cursor: pointer;
+    background-color: var(--primary-bg-color);
+
+}
+
+.info-btn__submit-btn:hover {
+    text-decoration: underline;
+}
+
+.info-btn__submit-btn--drak {
+    background-color: #E5E1DA;
+        
+}
+
+.info-btn__submit-btn--drak:hover {
+    text-decoration: underline;
+}
 
 
 
 /*ROOM GALLORY SECTION*/
 .room-container__grid {
     display: grid;
-    grid-template-columns: repeat(2 , 1fr);
+    grid-template-columns: 600px 600px;
     grid-auto-rows: auto;
     place-items: center;
+    padding: 50px 250px;
     gap: 1rem;
-    padding: 3rem 7rem;
     background-color: #E5E1DA;
 
     .room__article img {
@@ -400,7 +501,7 @@ body {
         align-items: center;
         border: none;
         border-radius: 5px;
-        box-shadow: 0 2px 6px 0 rgba(3, 3, 3, 0.25);
+        
         }
     
     .articles-detail__box {
@@ -453,7 +554,7 @@ body {
 }
 .aside__facility__grid {
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: 400px 400px 400px;
     grid-auto-rows: auto;
     place-items: center;
     gap: 1.5rem;
@@ -464,7 +565,7 @@ body {
         aspect-ratio: 9 / 6;
         border: none;
         border-radius: 5px;
-        box-shadow: 0 2px 6px 0 rgba(3, 3, 3, 0.25);
+        
 
         }
         .aside-heading__title-second {
@@ -482,14 +583,16 @@ body {
 /*SEARCH & BOOKING PAGE*/
 
 .search {
-    display: grid;
-    gap: 45px;
-    grid-template-columns: repeat(min-width(300px, 1fr));
-    grid-auto-flow: row;
-    padding: 0 7rem;
-    background-color: var(--primary-bg-color);
-    text-align: center;
-    color: var(--primary-fonts-color);
+    display: flex;
+    flex-direction: row;
+    gap: 2rem;
+    align-items: center;
+
+    /*display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: auto;
+    gap: 3rem;*/
+    
 
     .search__heading-title {
         letter-spacing: 2px;
@@ -500,9 +603,8 @@ body {
     }
 
     .search__form {
-        grid-column: 1;
         display: flex;
-        align-items: center;
+        align-self: flex-start;
         flex-direction: column;
         margin: 0 3rem;
         width: 300px;
@@ -549,6 +651,9 @@ body {
 
    
 }
+.search__form--fixed {
+    position: fixed;
+}
 
 
 /*ROOM INFOMATION SECTION*/
@@ -571,7 +676,7 @@ body {
         aspect-ratio: 9 / 5;
         border: none;
         border-radius: 4px;
-        box-shadow: var(--main-box-shadow);
+       
     }
     .room__heading-title {
         margin: 0;
@@ -600,7 +705,7 @@ body {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: auto;
-    gap: 2rem;
+    gap: 3rem;
     
 }
 .results__heading-title {
@@ -635,10 +740,7 @@ body {
 
     
 }
-.article-text--center {
-    margin: 0;
-    text-align: center;
-}
+
 
 .results__flex-box {
     grid-column: 1;
@@ -688,7 +790,6 @@ body {
         height: 40px;
         margin: 0 0.5rem 1rem 0.5rem;
         border: none;
-        box-shadow: var(--main-box-shadow);
         border-radius: 4px;
         font-family: var(--article-fonts);
         font-size: var(--article-font-size);
@@ -722,20 +823,21 @@ body {
 /*MEDIA QUERIES EFFECT
 ADAPTING TO MOBILE AND SMALLER DEVICES*/
 
-@media (max-width: 768px) {
-    body {
-        margin: 10px;
-    }
-    .page-wrapper {
-        width: 100%;
-    }
+@media (max-width: 920px) {
     .heading {
-        width: 100%;
+        padding: 3rem;
     }
-    .heading .menu {
+    .heading .menu__link {
         display: none;
     }
-    .container, .icon-section, .aside, .footer-news-letter__form, .footer-adress, .footer__link-item, .footer-social-media__icon {
+
+    .heading .menu__ham {
+        display: block;
+        transform: scale(2);
+    }
+
+    
+    /*.container, .icon-section, .aside, .footer-news-letter__form, .footer-adress, .footer__link-item, .footer-social-media__icon {
         padding: 10px;
     }
 
@@ -747,10 +849,13 @@ ADAPTING TO MOBILE AND SMALLER DEVICES*/
 
     .menu__link {
         margin: 5px 0;
-    }
+    }*/
 
     .heading__logo img {
         width: 80%;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
     }
 
     .form__label, .form__input, .form-btn__submit-button, .icon-section {
